# disk-forensics-mcp-server

./: .gitignore  README.md  pyproject.toml
disk_forensics_mcp_server/: __init__.py  __main__.py
disk_forensics_mcp_server/handlers/: __init__.py  ad1_handler.py  base_handler.py  e01_handler.py  raw_handler.py  vhd_handler.py  vmdk_handler.py
disk_forensics_mcp_server/models/: schemas.py
disk_forensics_mcp_server/server/: __init__.py  mcp_server.py
disk_forensics_mcp_server/tools/: __init__.py
disk_forensics_mcp_server/tools/disk_tools/: __init__.py  analyze_image.py  list_partitions.py
disk_forensics_mcp_server/tools/filesystem_tools/: __init__.py  extract_directory.py  extract_file.py  get_directory_tree.py  get_file_metadata.py  read_file.py  scan_deleted_files.py  search_by_extension.py  search_by_timestamp.py
disk_forensics_mcp_server/tools/hash_tools/: __init__.py  calculate_hash.py
disk_forensics_mcp_server/utils/: image_detector.py  parallel_utils.py
forensics-mcp-server/: pyproject.toml
forensics-mcp-server/src/forensics_mcp_server/: __init__.py
forensics-mcp-server/src/forensics_mcp_server/handlers/: raw_handler.py
scripts/: perf_disk_forensics.py  perf_extract_directory.py
src/: __main__.py
src/forensics_mcp_server/handlers/: base_handler.py
src/forensics_mcp_server/server/: mcp_server.py
src/handlers/: __init__.py  ad1_handler.py  base_handler.py  e01_handler.py  vhd_handler.py  vmdk_handler.py
src/models/: schemas.py
src/server/: mcp_server.py
src/tools/disk_tools/: analyze_image.py  list_partitions.py
src/tools/filesystem_tools/: extract_file.py  get_directory_tree.py  get_file_metadata.py  list_files.py  read_file.py  scan_deleted_files.py  search_by_extension.py  search_by_timestamp.py
src/tools/hash_tools/: __init__.py  calculate_hash.py
src/utils/: image_detector.py
tests/: benchmark_cache.py  benchmark_cache_deep.py  benchmark_deep_recursive.py
(+7 files in other folders)
